Modified grid generation functions

--- a/Notebooks/Intro_to_HZ_evolution.ipynb
+++ b/Notebooks/Intro_to_HZ_evolution.ipynb
@@ -5,6 +5,8 @@
    "id": "dbf52931-b468-42dd-b113-c7ee0285acf2",
    "metadata": {},
    "source": [
+    "## Introduction to the HZ_evolution package\n",
+    "\n",
     "This jupyter notebook is intended to provide an introduction to the features of the HZ_evolution package. The purpose of this package is to characterize the instellation history of exoplanets, model how a star's habitable zone changes in time, and to calculate the duration that a planet spends in the habitable zone\n",
     "\n",
     "First let's start by importing some packages that we will use in this example"
@@ -278,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x17f3db2d0>"
+       "<matplotlib.lines.Line2D at 0x3932692d0>"
       ]
      },
      "execution_count": 10,
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "532894a1-27db-4284-8826-c3128709cf7b",
    "metadata": {},
    "outputs": [
@@ -488,7 +490,7 @@
        "Text(0, 0.5, 'S (S_Earth)')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,13 +543,23 @@
    "id": "ccd29e64-6e04-42a8-8058-70e4d8e9a342",
    "metadata": {},
    "source": [
-    "Beyond using the HZ_evolution and HZ_planet objects this package also provides the ability to generate a model grid of habitable durations, time interior, and time exterior.  This is useful for stellar model fitting, where we would like to obtain these properties with uncertainties. Using interpolation, we can obtain these quantities at each step in an MCMC chain, without having to calculate them using a stellar evolutionary track."
+    "Beyond using the HZ_evolution and HZ_planet objects this package also provides the ability to generate a model grid of habitable durations, time interior, and time exterior.  This is useful for stellar model fitting, where we would like to obtain these properties with uncertainties. Using interpolation, we can obtain these quantities at each step in an MCMC chain, without having to calculate them using a stellar evolutionary track. \n",
+    "\n",
+    "The ```HZ_evolution``` package includes utilities to calculate habitable durations for each point in the MIST isochrone grid. We use the ```DFInterpolator``` object in the ```isochrones.py``` package to obtain values of habitable durations for any set of stellar parameters ([Fe/H], initial mass, and equivalent evolutionary phase (EEP)), with planetary instellation $S_{eff}$ as an additional parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67953823-077c-41c9-a56f-f18e191f0c63",
+   "metadata": {},
+   "source": [
+    "Constructing a 4D model grid for habitable duration is somewhat computer memory intensive and requires a decent amount of time to run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad85ba1-c839-4110-b728-affe308d7d45",
+   "id": "c3a015c5-7a8d-44b2-b49a-ac45183453c2",
    "metadata": {},
    "outputs": [],
    "source": []
