Fixes to help with installation

--- a/Notebooks/Intro_to_HZ_evolution.ipynb
+++ b/Notebooks/Intro_to_HZ_evolution.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Introduction to the HZ_evolution package\n",
     "\n",
-    "This jupyter notebook is intended to provide an introduction to the features of the HZ_evolution package. The purpose of this package is to characterize the instellation history of exoplanets, model how a star's habitable zone changes in time, and to calculate the duration that a planet spends in the habitable zone\n",
+    "This jupyter notebook is intended to provide an introduction to the features of the HZ_evolution package. The purpose of this package is to characterize the instellation history of exoplanets, model how a star's habitable zone changes in time, and to calculate the duration that a planet spends in the habitable zone.\n",
+    "\n",
+    "Before running this notebook it is recommended that you make sure that the ```isochrones``` package is working properly. We recommend running through their [Quick Start guide](https://isochrones.readthedocs.io/en/latest/quickstart.html) up until the section on model fitting.\n",
     "\n",
     "First let's start by importing some packages that we will use in this example"
    ]
@@ -55,7 +57,7 @@
    "id": "e7377102-8e0d-4fe4-880a-1cdc3af4236f",
    "metadata": {},
    "source": [
-    "(Don't worry if you get an warning message about PyMultiNest if you don't have it installed)"
+    "(Don't worry if you get a warning messages about PyMultiNest or Holoviews if you don't have it installed)"
    ]
   },
   {
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "68ff4cee-0985-48b4-9405-52634d8a9cac",
    "metadata": {},
    "outputs": [],
@@ -128,6 +130,14 @@
     "age_input= 10**track_df['age'].values #MIST gives log(age), convert to age\n",
     "L_input= 10**track_df['logL'].values #MIST gives log(L), convert to L\n",
     "Teff_input= track_df['Teff'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb3c870-0540-4ff2-b6d4-fb585c552432",
+   "metadata": {},
+   "source": [
+    "If this is your first time running the ```isochrones``` package, it will take a while to run while it downloads the MIST isochrones and interpolates over them. After the first time you access the MIST grid, it is very quick to evaluate on the order of 10 ms."
    ]
   },
   {
@@ -565,7 +575,9 @@
    "source": [
     "In this example we will construct the model grid using the ```calculate_grid_4D``` function. It has optional keyword arguments to specify options such as the output file name and habitable zone formulation but we will use the default options for this example.\n",
     "\n",
-    "**The following step may take more than an hour of computation time depending on your computer, so make sure that you have time to leave it running in the background before running it.**"
+    "**The following step may take more than an hour of computation time depending on your computer, so make sure that you have time to leave it running in the background before running it.**\n",
+    "\n",
+    "It only needs to be run once and then one will be able to access the model grid resulting from this calculation."
    ]
   },
   {
@@ -2553,14 +2565,6 @@
     "\n",
     "This is a powerful tool that will help us to obtain uncertainties in $\\tau$, $t_{interior}$, and $t_{exterior}$ from stellar model fitting. To see an example of how this works see the next Jupyter notebook: ```Kepler62f_example.ipynb```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3221284-e431-48b6-b7ac-b3ce288b5179",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
