small changes to jupyter notebook

--- a/Notebooks/Intro_to_HZ_evolution.ipynb
+++ b/Notebooks/Intro_to_HZ_evolution.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This jupyter notebook is intended to provide an introduction to the features of the HZ_evolution package. The purpose of this package is to characterize the instellation history of exoplanets, model how a star's habitable zone changes in time, and to calculate the duration that a planet spends in the habitable zone.\n",
     "\n",
-    "Before running this notebook it is recommended that you make sure that the ```isochrones``` package is working properly. We recommend running through their [Quick Start guide](https://isochrones.readthedocs.io/en/latest/quickstart.html) up until the section on model fitting.\n",
+    "Before running this notebook, it is recommended that you make sure that the ```isochrones``` package is working properly. We recommend running through their [Quick Start guide](https://isochrones.readthedocs.io/en/latest/quickstart.html) up until the section on model fitting.\n",
     "\n",
     "First let's start by importing some packages that we will use in this example"
    ]
@@ -57,7 +57,7 @@
    "id": "e7377102-8e0d-4fe4-880a-1cdc3af4236f",
    "metadata": {},
    "source": [
-    "(Don't worry if you get a warning messages about PyMultiNest or Holoviews if you don't have it installed)"
+    "(Don't worry if you get a warning messages about PyMultiNest or Holoviews if you don't have them installed)"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "id": "552a275c-7b89-4cd1-aa30-a9bae54f670c",
    "metadata": {},
    "source": [
-    "Most of the functions in HZ_evolution package are contained within two main object classes: the ```HZ_evolution``` object which describes how a star's habitable zone evolves in time, and the ```HZ_planet``` object which is a subclass of ```HZ_evolution``` which calculate's a planets instellation history, duration spend in the habitable zone, and durations spent interior or exterior to the habitable zone before entering."
+    "Most of the functions in HZ_evolution package are contained within two main object classes: the ```HZ_evolution``` object which describes how a star's habitable zone evolves in time, and the ```HZ_planet``` object which is a subclass of ```HZ_evolution``` which calculates a planet's instellation history, duration spend in the habitable zone, and durations spent interior or exterior to the habitable zone before entering."
    ]
   },
   {
@@ -94,7 +94,11 @@
    "id": "e91d2225-e6fa-4207-976a-0da39104bf1f",
    "metadata": {},
    "source": [
-    "Next we will specify the star that we want to similate.  For this case we will use a solar analog. Note that MIST uses EEP (equivalent evolutionary phase as a proxy for age)"
+    "Before we generate a stellar evolutionary track, lets take a brief detour to address one of the more confusing aspects of the ```isochrones``` package. The MIST model grid uses a property called EEP, equivalent evolutionary phase, as a proxy for age. EEP is a dimensionless quantity that describes what stage a star is in its evolutionary history.  EEP=1 corresponds to the premain sequence, EEP=202 is the zero age main sequence, EEP=454 is the terminal age main sequence, and EEP=605 is the tip of the red giant branch. While EEP is a bit less intuitive that stellar age, it is more useful for a stellar evolutionary track grid as stars vary widely in terms of their lifetimes and evolutionary timescales, and a model grid generated uniformly in log(age) would have difficulty capturing the rapid evolutionary changes on the post-main sequence. \n",
+    "\n",
+    "To obtain EEP for a given stellar age or vice versa, one needs to know the mass and [Fe/H] of the star. To calculate EEP from a known stellar mass, log(age) and [Fe/H] one can use the ```mist_track.get_eep()``` function (see the documentation for ```isochrones``` for more information. Converting from EEP to age is much more straightforward. Age is one of the stellar properties computed in the MIST model grid, so one just needs to interpolate over the MIST grid using the ```mist_track.interp_value()``` function.\n",
+    "\n",
+    "With that background out of the way, we will now specify the star that we want to similate.  For this case we will use a solar analog. "
    ]
   },
   {
@@ -146,7 +150,7 @@
    "metadata": {},
    "source": [
     "## The HZ_evolution class\n",
-    "Next let's initialize an ```HZ_evolution``` object with this evolutionary track. We will specify the formulation of the habitable zone using the ```HZ_form``` keyword argument. The options for ```HZ_form``` are the Kopparapu+ 2013 moist greenhouse and max greenhouse (\"K13\"), Kopparapu+  2013 recent Venus and Early Mars (\"K13_optimistic\"), Ramire+z 2018 (\"R18\". One can also use a custom formulation of the habitable zone, providing functions for the inner and outer edges as keyword arguments. \n",
+    "Next let's initialize an ```HZ_evolution``` object with this evolutionary track. We will specify the formulation of the habitable zone using the ```HZ_form``` keyword argument. The options for ```HZ_form``` are the Kopparapu+ 2013 moist greenhouse and max greenhouse (\"K13\"), Kopparapu+  2013 recent Venus and Early Mars (\"K13_optimistic\"), Ramirez+ 2018 (\"R18\". One can also use a custom formulation of the habitable zone, providing functions for the inner and outer edges as keyword arguments. \n",
     "\n",
     "For our example lets use the Kopparapu+ 2013 optimistic habitable zone)"
    ]
@@ -166,7 +170,7 @@
    "id": "b53151a0-4381-42b1-a30a-a3c2bbf7a7f9",
    "metadata": {},
    "source": [
-    "Next lets use the ```HZ_evolution``` object to find the location of the continuously habitable zone (CHZ). There are multiple different definitions of the CHZ that one can specify. One can use the form of the CHZ that is often used where one considers regions that spend more than a fixed duration in the habitable zone to be continuously habitable. Alternatively, one can define the CHZ as the region around a star where planets sustain habitable conditions from a specified starting age to the current day.\n",
+    "Next let's use the ```HZ_evolution``` object to find the location of the continuously habitable zone (CHZ). There are multiple different definitions of the CHZ that one can specify. One can use the form of the CHZ that is often used where one considers regions that spend more than a fixed duration in the habitable zone to be continuously habitable. Alternatively, one can define the CHZ as the region around a star where planets sustain habitable conditions from a specified starting age to the current day.\n",
     "\n",
     "As an example we shall simulate both cases: a fixed duration CHZ including planets that spend more than 2Gyr in the HZ and a sustained CHZ including planets that remain in the HZ from a starting age of 50 Myr to present.\n",
     "\n",
