Changes to notebooks and grid functions

--- a/Notebooks/Intro_to_HZ_evolution.ipynb
+++ b/Notebooks/Intro_to_HZ_evolution.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "To obtain EEP for a given stellar age or vice versa, one needs to know the mass and [Fe/H] of the star. To calculate EEP from a known stellar mass, log(age) and [Fe/H] one can use the ```mist_track.get_eep()``` function (see the documentation for ```isochrones``` for more information. Converting from EEP to age is much more straightforward. Age is one of the stellar properties computed in the MIST model grid, so one just needs to interpolate over the MIST grid using the ```mist_track.interp_value()``` function.\n",
     "\n",
-    "With that background out of the way, we will now specify the star that we want to similate.  For this case we will use a solar analog. "
+    "With that background out of the way, we will now specify the star that we want to simulate.  For this case we will use a solar analog. "
    ]
   },
   {
@@ -150,9 +150,9 @@
    "metadata": {},
    "source": [
     "## The HZ_evolution class\n",
-    "Next let's initialize an ```HZ_evolution``` object with this evolutionary track. We will specify the formulation of the habitable zone using the ```HZ_form``` keyword argument. The options for ```HZ_form``` are the Kopparapu+ 2013 moist greenhouse and max greenhouse (\"K13\"), Kopparapu+  2013 recent Venus and Early Mars (\"K13_optimistic\"), Ramirez+ 2018 (\"R18\". One can also use a custom formulation of the habitable zone, providing functions for the inner and outer edges as keyword arguments. \n",
+    "Next let's initialize an ```HZ_evolution``` object with this evolutionary track. We will specify the formulation of the habitable zone using the ```HZ_form``` keyword argument. The options for ```HZ_form``` are the Kopparapu+ 2013 moist greenhouse and max greenhouse (\"K13\"), Kopparapu+  2013 recent Venus and Early Mars (\"K13_optimistic\"), Ramirez+ 2018 (\"R18\". One can also use a custom formulation of the habitable zone, providing functions for the inner and outer edges as the keyword arguments ```custom_inner_HZ_func``` and ```custom_outer_HZ_func``` respectively and setting ```HZ_form = 'custom'```.\n",
     "\n",
-    "For our example lets use the Kopparapu+ 2013 optimistic habitable zone)"
+    "For our example lets use the Kopparapu+ 2013 optimistic habitable zone."
    ]
   },
   {
@@ -581,7 +581,7 @@
     "\n",
     "**The following step may take more than an hour of computation time depending on your computer, so make sure that you have time to leave it running in the background before running it.**\n",
     "\n",
-    "It only needs to be run once and then one will be able to access the model grid resulting from this calculation."
+    "It only needs to be run once and then one will be able to access the model grid resulting from this calculation. By default this will save the results as a csv  file in the outputs directory called ```tau_df_K13_optimistic_4D.csv```, but you can change the filename using the ```fname``` keyword argument."
    ]
   },
   {
@@ -2407,7 +2407,7 @@
    "source": [
     "This will take a while to run. Once it is finished we can use its output to construct an interpolator. The HZ_evolution package has two functions to construct an interpolator for a calculated model grid ```construct_interpolator_3D``` and ```construct_interpolator_4D``` corresponding to ```calculate_grid_3D``` and ```calculate_grid_4D``` respectively.\n",
     "\n",
-    "In our example we will use the ```construct_interpolator_4D``` function to make an interpolator for the 4 dimensional model grid we constructed in the previous step. While one could call the function without arguments in the form ```construct_interpolator_4D()``` to construct an interpolator using all the points in the model grid, it would be very RAM intensive and time consuming. In this example we will instead use keyword arguments to specify the region of parameter space we would like to interpolate over. We'll consider the region of parameter space around our solar model with masses within 0.3 Msun of the sun, [Fe/H] values within 0.5 dex, and EEPs (equivalent evolutionary phases) on the Main Sequence.\n",
+    "In our example we will use the ```construct_interpolator_4D``` function to make an interpolator for the 4 dimensional model grid we constructed in the previous step. This reads the file we saved in the outputs folder by default, or another file specified by the filename ```fname```.  While one could call the function without arguments in the form ```construct_interpolator_4D()``` to construct an interpolator using all the points in the model grid, it would be very RAM intensive and time consuming. In this example we will instead use keyword arguments to specify the region of parameter space we would like to interpolate over. We'll consider the region of parameter space around our solar model with masses within 0.3 Msun of the sun, [Fe/H] values within 0.5 dex, and EEPs (equivalent evolutionary phases) on the Main Sequence.\n",
     "\n"
    ]
   },
