fixed bug with min EEP in grid
takes longer but actually works now

--- a/Notebooks/Intro_to_HZ_evolution.ipynb
+++ b/Notebooks/Intro_to_HZ_evolution.ipynb
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x17f5d3cd0>"
+       "<matplotlib.lines.Line2D at 0x30dd4a290>"
       ]
      },
      "execution_count": 10,
@@ -584,7 +584,7 @@
    "source": [
     "In this example we will construct the model grid using the ```calculate_grid_4D``` function. It has optional keyword arguments to specify options such as the output file name and habitable zone formulation. For our example we will construct a model grid consisting of main sequence stars between 0.5 - 1.5 $M_\\odot$. We will use the Kopparapu et al. (2013) optimistic habitable zone and save our model grid with the name  ```tutorial_grid.csv``` in the outputs directory. See below for the keyword arguments that specify each option. For usage outside of this example, we recommend that you construct a larger model grid so that it can be used by multiple simulations without having to reconstruct the grid each time.\n",
     "\n",
-    "This might take around 5-10 minutes to run, depending on your computer speed. It only needs to be run once and then one will be able to access the model grid resulting from this calculation. "
+    "**This might take around 15 minutes to run, depending on your computer speed.** It only needs to be run once and then one will be able to access the model grid resulting from this calculation. "
    ]
   },
   {
@@ -1492,7 +1492,7 @@
       "\n",
       "Mass=1.50 \n",
       "\n",
-      "Took  162.63600266701542  seconds\n",
+      "Took  915.0462589579984  seconds\n",
       "Saved to:  /Users/ntuchow/opt/anaconda3/envs/making_package/lib/python3.11/site-packages/HZ_evolution/outputs/tutorial_grid.csv\n"
      ]
     }
@@ -1563,7 +1563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tau = 1.974e+09 yrs\n"
+      "Tau = 2.041e+09 yrs\n"
      ]
     }
    ],
@@ -1591,7 +1591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t_int = 0.000e+00 yrs\n",
+      "t_int = 5.743e+06 yrs\n",
       "t_ext = 0.000e+00 yrs\n"
      ]
     }
@@ -1649,8 +1649,8 @@
      "output_type": "stream",
      "text": [
       "Tau = 5.094e+09 yrs\n",
-      "t_int = 0.000e+00 yrs\n",
-      "t_ext = 2.803e+08 yrs\n"
+      "t_int = 3.751e+05 yrs\n",
+      "t_ext = 2.807e+08 yrs\n"
      ]
     }
    ],
